feat(backend): add filter for UserController and pagination for MainStorageController
